# projektMiSwIS

./: README.md
działaaaa/: CMakeLists.txt  makefile  mpu_test_CM4.elf  prog.js  style.css
http_full_c/: prog.js  start.sh  style.css
http_server/: CMakeLists.txt  main.cpp
mpu_test/: .mxproject  mpu_test.ioc
mpu_test/CA7/: .project
mpu_test/CA7/DeviceTree/mpu_test/kernel/: stm32mp157d-mpu_test-mx.dts
mpu_test/CA7/DeviceTree/mpu_test/optee-os/: stm32mp157d-mpu_test-mx.dts
mpu_test/CA7/DeviceTree/mpu_test/tf-a/: stm32mp15-mx.dtsi  stm32mp157d-mpu_test-mx.dts
mpu_test/CA7/DeviceTree/mpu_test/u-boot/: stm32mp157d-mpu_test-mx-u-boot.dtsi  stm32mp157d-mpu_test-mx.dts.bak
mpu_test/CM4/: .cproject  .project  mpu_test_CM4 Debug.launch
mpu_test/CM4/Core/Inc/: main.h  stm32mp1xx_hal_conf.h
mpu_test/CM4/Core/Src/: adc.c  gpio.c  main.c
mpu_test/CM4/Debug/: makefile  mpu_test_CM4.elf  mpu_test_CM4.list  mpu_test_CM4.map  objects.list
mpu_test/CM4/Debug/Common/System/: subdir.mk  system_stm32mp1xx.cyclo  system_stm32mp1xx.d  system_stm32mp1xx.su
mpu_test/CM4/Debug/Core/Src/: main.cyclo  main.d  main.su  stm32mp1xx_hal_msp.cyclo  stm32mp1xx_hal_msp.d  stm32mp1xx_hal_msp.su  stm32mp1xx_it.d  subdir.mk
mpu_test/CM4/Debug/Core/Startup/: subdir.mk
mpu_test/CM4/Debug/Drivers/STM32MP1xx_HAL_Driver/: stm32mp1xx_hal.cyclo  stm32mp1xx_hal.d  stm32mp1xx_hal.su  stm32mp1xx_hal_cortex.cyclo  stm32mp1xx_hal_cortex.d  stm32mp1xx_hal_cortex.su  stm32mp1xx_hal_dma.cyclo  stm32mp1xx_hal_dma.d  stm32mp1xx_hal_dma.su  stm32mp1xx_hal_dma_ex.cyclo  stm32mp1xx_hal_dma_ex.d  stm32mp1xx_hal_dma_ex.su  stm32mp1xx_hal_exti.cyclo  stm32mp1xx_hal_exti.d  stm32mp1xx_hal_exti.su  stm32mp1xx_hal_gpio.cyclo  stm32mp1xx_hal_gpio.d  stm32mp1xx_hal_gpio.su  stm32mp1xx_hal_hsem.cyclo  stm32mp1xx_hal_hsem.d  stm32mp1xx_hal_hsem.su  stm32mp1xx_hal_ipcc.cyclo  stm32mp1xx_hal_ipcc.d  stm32mp1xx_hal_ipcc.su  stm32mp1xx_hal_mdma.cyclo  stm32mp1xx_hal_mdma.d  stm32mp1xx_hal_mdma.su  stm32mp1xx_hal_pwr.cyclo  stm32mp1xx_hal_pwr.d  stm32mp1xx_hal_pwr.su  stm32mp1xx_hal_pwr_ex.cyclo  stm32mp1xx_hal_pwr_ex.d  stm32mp1xx_hal_pwr_ex.su  stm32mp1xx_hal_rcc.cyclo  stm32mp1xx_hal_rcc.d  stm32mp1xx_hal_rcc.su  stm32mp1xx_hal_rcc_ex.cyclo  stm32mp1xx_hal_rcc_ex.d  stm32mp1xx_hal_rcc_ex.su  stm32mp1xx_hal_tim.d  (+2 more)
mpu_test/CM4/Debug/OPENAMP/: mbox_ipcc.d  openamp_log.d  subdir.mk
mpu_test/CM4/RemoteProc/: fw_cortex_m4.sh
ros2_ws/http_server/: CMakeLists.txt  index.html  main.cpp  prog.js
ros2_ws/install/http_server/lib/http_server/: http_server
ros2_ws/install/http_server/share/http_server/: local_setup.dsv  package.bash  package.dsv  package.sh  package.xml  package.zsh
ros2_ws/log/: latest_build
testing/http_full_c/: http  index.html  main.c
testing/mpu_test/: .mxproject  .project  mpu_test.ioc
testing/mpu_test/CA7/: manifest.prop
testing/mpu_test/CM4/: .project  mpu_test_CM4 Debug.launch  mpu_test_CM4 Release.launch
testing/mpu_test/CM4/Core/Inc/: main.h  stm32mp1xx_hal_conf.h  stm32mp1xx_it.h  wire.h
testing/mpu_test/CM4/Debug/: makefile  mpu_test_CM4.elf  mpu_test_CM4.list  mpu_test_CM4.map  objects.list  sources.mk
testing/mpu_test/CM4/RemoteProc/: fw_cortex_m4.sh
testing/ros2_ws/install/: local_setup.sh  setup.sh
working/: http  http_tcp  index.html  main.c  s.sh
(+78 files in other folders)
